[package]
name = "freertos-rust-examples"
version = "0.1.1"
authors = ["Tobias Kaupat <tk@lobaro.de>"]
edition = "2018"
description = """
Create to use FreeRTOS in rust projects. It contains binaries for demos on some architecutres.
"""
keywords = ["FreeRTOS", "embedded", "demo", "examples"]
repository = "https://github.com/lobaro/FreeRTOS-rust"

[dependencies]
freertos-rust = { path = "../freertos-rust" }

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.7.1"
cortex-m-rt = { version = "0.6.12" }
nrf9160-pac = "0.2.1"

# Example: win
[target.x86_64-pc-windows-gnu.dependencies]

# Example: linux
[target.x86_64-unknown-linux-gnu.dependencies]

[build-dependencies]
freertos-cargo-build = { path = "../freertos-cargo-build" }
